# perception_system

./: CMakeLists.txt  README.md  package.xml  thirdparty.repos
include/perception/: FollowPersonNode.hpp  ObjectsDetectionNode.hpp  PeopleDetectionNode.hpp  PersonPointingNode.hpp
include/perception_system/: ColorPersonNode.hpp  FollowPersonNode.hpp  ObjectsDetectionNode.hpp  PeopleDetectionNode.hpp  PerceptionFunctions.hpp  PersonPointingNode.hpp  YoloNode.hpp
launch/: perception3d.launch.py
perception_system/: CMakeLists.txt  package.xml
perception_system/include/perception_system/: CollisionServer.hpp  ColorPersonNode.hpp  DebugNode.hpp  FollowPersonNode.hpp  ObjectsDetectionNode.hpp  PeopleDetectionNode.hpp  PerceptionFunctions.hpp  PerceptionListener.hpp  PerceptionUtils.hpp  PersonPointingNode.hpp  YoloNode.hpp
perception_system/launch/: perception3d.launch.py
perception_system/src/: collision_server_main.cpp  debug_main.cpp  follow_person_main.cpp  objects_detection_main.cpp  people_detection_main.cpp  person_pointing_main.cpp  test_listener_main.cpp
perception_system/src/perception_system/: CollisionServer.cpp  ColorPersonNode.cpp  DebugNode.cpp  FollowPersonNode.cpp  ObjectsDetectionNode.cpp  PeopleDetectionNode.cpp  PerceptionListener.cpp  PersonPointingNode.cpp
perception_system_interfaces/: CMakeLists.txt  package.xml
perception_system_interfaces/msg/: Detection.msg  DetectionArray.msg
perception_system_interfaces/srv/: ExtractCollision.srv  ExtractNPlanes.srv  IsolatePCBackground.srv  IsolatePCClasses.srv  RemoveDepthClasses.srv
src/: color_person_main.cpp  follow_person_main.cpp  objects_detection_main.cpp  people_detection_main.cpp  person_pointing_main.cpp  yolo_main.cpp
src/perception/: FollowPersonNode.cpp  ObjectsDetectionNode.cpp  PeopleDetectionNode.cpp  PersonPointingNode.cpp
src/perception_system/: ColorPersonNode.cpp  FollowPersonNode.cpp  ObjectsDetectionNode.cpp  PeopleDetectionNode.cpp  PersonPointingNode.cpp  YoloNode.cpp
