<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>perception_system</name>
  <version>0.0.0</version>
  <description>ROS2 perception_system package</description>
  <maintainer email="josemiguel.guerrero@urjc.es">Jose Miguel Guerrero Hernandez</maintainer>
  <license>Creative Commons Attribution-ShareAlike 4.0 International License.</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>yolov8_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>lifecycle_msgs</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp_cascade_lifecycle</depend>
  <depend>cv_bridge</depend>
  <depend>vision_msgs</depend>
  <depend>image_geometry</depend>
  <depend>message_filters</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>geometry_msgs</depend>
  <depend>perception_system_interfaces</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_conversions</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
